Minor changes and cleaning

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           </div>
         </div>
 
-        <div class="col-md-6 intro-img order-md-last order-first"> </div>
+        <div class="col-md-6 intro-img order-md-last order-first">
+          <img src="img/Terminal1GImp.png" alt="" style="box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);" class="img-fluid"/>
+        </div>
       </div>
 
     </div>
@@ -102,7 +104,7 @@
         </header>
 
         <div class="row">
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.0s">
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
                   style="color: #ff689b;"></i></div>
@@ -716,12 +718,7 @@
             <div class="row">
 
               <div class="col-sm-6">
-
-                <div class="footer-info">
-                  <h3>ProtoHacks</h3>
-                  <p></p>
-                </div>
-
+                
                 <div class="footer-newsletter">
                   <h4>Our Newsletter</h4>
                   <p>Subscribe to get the latest news sent right to your inbox!</p>
@@ -747,9 +744,6 @@
                 <div class="footer-links">
                   <h4>Contact Us</h4>
                   <p>
-                      1 Troll Way <br>
-                      Mountain View, CA 69420<br>
-                      United States <br>
                       <strong>Phone:</strong> +1 555-555-6969<br>
                       <strong>Email:</strong> protohacks@gmail.com<br>
                     </p>
