--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>Are your prototyping skills up for a challenge?</h2>
+          <h2>Are your innovation skills up for a challenge?</h2>
           <div>
-            <a href="our-goal.html" class="btn-get-started scrollto">Learn More</a>
+            <a href="our-goal.html" class="btn-get-started scrollto">Sign Up</a>
           </div>
         </div>
 
