--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
       </div>
 
       <div class="container">
+
+        
         <!--<div class="row counters">
 
           <div class="col-lg-3 col-6 text-center"><span data-toggle="counter-up">4</span>
@@ -611,16 +613,15 @@
 </div>
 
       </div>
-    </section><!-- #team -->
-
+    </section><!-- #team --> 
         <!--==========================
       Clients Section
-    ============================--
+    ============================-->
     <section id="clients" class="wow fadeInUp">
       <div class="container">
 
         <header class="section-header">
-          <h3>Our Clients</h3>
+          <h3>Our Sponsors</h3>
         </header>
 
         <div class="owl-carousel clients-carousel">
