--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
         </header>
 
         <div class="owl-carousel clients-carousel">
-        
+          <img src="img/clients/scilynklogo.png" alt="">
         </div>
 
       </div>
