--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ProtoHacks</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="" name="escription">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
