--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="">Sign Up</a></li>
-          <li><a href="">Sign In</a></li>
+          <li><a href="signup.html" target="_">Sign Up</a></li>
+          <!--<li><a href="">Sign In</a></li>-->
           <li><a href="#footer">Contact Us</a></li>
           <li><a href="https://instagram.com/protohacks" class="instagram"><i class="fa fa-instagram"></i></a></li>
           <!--<li class="active"><a href="index.html">Home</a></li>-->
@@ -79,7 +79,7 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Are your innovation skills up for a challenge?</h2>
           <div>
-            <a href="our-goal.html" class="btn-get-started scrollto">Sign Up</a>
+            <a href="signup.html" class="btn-get-started scrollto" target="_">Sign Up</a>
           </div>
         </div>
 
