--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>What's new:</h3>
-          <p>Catch up on the latest at ProtoHacks</p>
+          <h3>ProtoHacks' Goals:</h3>
+          <p>Inspiring Future Engineers</p>
         </header>
 
         <div class="row">
@@ -108,8 +108,8 @@
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
                   style="color: #ff689b;"></i></div>
-              <h4 class="title"><a>Updates</a></h4>
-              <p class="description">View our latest announcements.</p>
+              <h4 class="title">Creativity</h4>
+              <p class="description">Participants can display their creativity through innoviative solutions to problems.</p>
             </div>
           </div>
 
@@ -118,8 +118,8 @@
             <div class="box">
               <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline"
                   style="color: #e98e06;"></i></div>
-              <h4 class="title"><a>Contact Us</a></h4>
-              <p class="description">Get your questions answered.</p>
+              <h4 class="title">Teamwork</h4>
+              <p class="description">In teams of four, participants practice teamwork throughout the hackathon with leadership, organization and more.</p>
             </div>
           </div>
 
@@ -129,8 +129,8 @@
             <div class="box">
               <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline"
                   style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a>Our Blog</a></h4>
-              <p class="description">Find out what's up at ProtoHacks</p>
+              <h4 class="title">Learning</h4>
+              <p class="description">ProtoHacks offers a variety of workshops, each teaching a unique skill or concept.</p>
             </div>
 
           </div>
@@ -232,36 +232,32 @@
       Why Us Section
     ============================-->
     <section id="why-us" class="wow fadeIn">
-      <div class="container-fluid">
+      <div class="container-fluid" id="aboutp">
 
         <header class="section-header">
           <h3>What do we offer?</h3>
-          <p>We have over 6 years of experience in the tech industry working with computers, networking hardware, and
-            professional software.</p>
+          <p style="font-size:20px;">ProtoHacks is a <strong>24 Hour</strong> hackathon providing <strong>amazing Prizes, Food, and more.</strong> ProtoHacks offers <strong>several workshops</strong> aiming to teach participants critical skills and concepts. That's not all, ProtoHacks provides <strong>advising and mentorship</strong> to teams during their worktimes and finally, ProtoHacks wraps up with <strong>professional judging and an award ceremony.</strong></h1>
         </header>
 
         <div class="row">
 
           <div class="col-lg-6">
-            <div class="why-us-img"><img src="img/MacroPCBdense.jpg" class="img-fluid" alt=""></div>
+            <div class="why-us-img"><img src="img/MacroPCBdense.jpg" class="img-fluid" alt=""></div> <!-- prizes picture -->
           </div>
 
           <div class="col-lg-6">
             <div class="why-us-content">
-              <p>Great performance and quality is key, and so is all of you. We're always taking inspiration from our
-                everyday experiences with technology to innovate further.</p>
-
-
+              <div class="why-us-img"><img src="img/MacroPCBdense.jpg" class="img-fluid" alt=""></div> <!-- schedule -->
               <!--<div class="features wow bounceInUp clearfix">
                 <i class="fa fa-diamond" style="color: #f058dc;"></i>
                 <h4>Corporis dolorem</h4>
                 <p>Commodi quia voluptatum. Est cupiditate voluptas quaerat officiis ex alias dignissimos et ipsum. Soluta at enim modi ut incidunt dolor et.</p>
               </div>-->
 
-              <div class="features wow bounceInUp clearfix">
+              <!--<div class="features wow bounceInUp clearfix">
                 <i class="fa fa-object-group" style="color: #ffb774;"></i>
-                <h4>Purpose-driven Products</h4>
-                <p>Our products are designed to be efficient and minimal; the focus is put on the core functionality.
+                <h4>Purpose-driven Projects</h4>
+                <p>Projects developed at ProtoHacks are created to solve a specific problem of significance.
                 </p>
               </div>
 
@@ -270,7 +266,7 @@
                 <h4>Innovation where possible</h4>
                 <p>Every product comes with everything you need, and nothing you don't. Our goal to keep moving forward
                   means we're going to develop features that bring value and improve the user experience constantly.</p>
-              </div>
+              </div>-->
 
             </div>
 
@@ -280,7 +276,7 @@
 
       </div>
 
-      <div class="container">
+      <div class="container" id="sponsors">
 
         
         <!--<div class="row counters">
@@ -734,11 +730,11 @@
                 <div class="footer-links">
                   <h4>Useful Links</h4>
                   <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Terms of service</a></li>
-                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#intro">Home</a></li>
+                    <li><a href="#services">Goals</a></li>
+                    <li><a href="#why-us">What We Offer</a></li>
+                    <li><a href="#sponsors">Sponsors</a></li>
+                    <li><a href="#footer">Contact</a></li>
                   </ul>
                 </div>
 
