--- a/index.html
+++ b/index.html
@@ -716,11 +716,18 @@
 
               <div class="col-sm-6">
                 
+                <div class="footer-links">
+                  <h4>Manage my account</h4>
+                  <ul>
+                    <li><a href="#intro">Go to account portal</a></li>
+                    <li><a href="#intro">Event registration</a></li>
+                  </ul>
+                </div>
                 <div class="footer-newsletter">
                   <h4>Our Newsletter</h4>
-                  <p>Subscribe to get the latest news sent right to your inbox!</p>
+                  <p>Subscribe to get the latest from ProtoHacks sent right to your inbox!</p>
                   <form action="" method="post">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email"><input type="submit" value="Subscribe">
+                    <input type="email" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email"><input type="submit" value="Subscribe">
                   </form>
                 </div>
 
@@ -734,14 +741,14 @@
                     <li><a href="#services">Goals</a></li>
                     <li><a href="#why-us">What We Offer</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
-                    <li><a href="#footer">Contact</a></li>
+                    <li><a href="#footer">Contact Us</a></li>
                   </ul>
                 </div>
 
                 <div class="footer-links">
                   <h4>Contact Us</h4>
                   <p>
-                      <strong>Phone:</strong> +1 555-555-6969<br>
+                      <!--<strong>Phone:</strong> +1 555-555-6969<br>-->
                       <strong>Email:</strong> protohacks@gmail.com<br>
                     </p>
                 </div>
