--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
           <li><a href="signup.html" target="_">Sign Up</a></li>
           <!--<li><a href="">Sign In</a></li>-->
           <li><a href="#footer">Contact Us</a></li>
-          <li><a href="https://instagram.com/protohacks" class="instagram"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://instagram.com/protohacks/" class="instagram" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/protohacks/" class="linkedin" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a></li>
           <!--<li class="active"><a href="index.html">Home</a></li>-->
         </ul>
       </nav><!-- .main-nav -->
@@ -754,10 +755,10 @@
                 </div>
 
                 <div class="social-links">
-                  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                  <!--<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>-->
+                  <a href="https://www.instagram.com/ProtoHacks/" class="instagram"  target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/company/protohacks/" class="linkedin" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a>
                 </div>
 
               </div>
