--- a/index.html
+++ b/index.html
@@ -581,22 +581,22 @@
 
         <!--==========================
       Team Section
-    ============================
+    ============================-->
     <section id="team" class="section-bg">
       <div class="container">
         <div class="section-header">
           <h3>Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p>Meet the team behind ProtoHacks.</p>
         </div>
 
         <div class="row">
-<div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-          <div class="member">
-              <img src="img/team-3.jpg" class="img-fluid" alt="">
+          <div class="col-lg-3 col-md-6 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+            <div class="member">
+              <img src="img/team/vinay.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
+                  <h4>Vinay Venkatesh</h4>
+                  <span>Founder</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -607,10 +607,45 @@
               </div>
             </div>
           </div>
-</div>
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+            <div class="member">
+              <img src="img/team/arvind.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Arvind Kumar</h4>
+                  <span>Organizer</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="member">
+              <img src="img/team/krutav.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Krutav Shah</h4>
+                  <span>Advisor</span>
+                  <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href="https://instagram.com/krutavshah"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
-    </section><!-- #team --> 
+    </section>
+    <!-- #team --> 
         <!--==========================
       Clients Section
     ============================-->
