--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
                 <!-- <input id="password" type="password" class="input-box" placeholder="Your Password">
                 <input id="password2" type="password" class="input-box" placeholder="Re-Enter Password"> -->
             <p><span><input type="checkbox" id="check1"></span><a href="lib/TOS.pdf" target="_">I agree to the Terms of Service</a></p> <!-- Make ToS download on click -->
-            <p><span><input type="checkbox" id="check2"></span><a href="lib/Injury_waiver.pdf" target="_">I have read the Disclaimer Form</a></p>
+            <p><span><input type="checkbox" id="check2"></span><a href="lib/Injury_waiver.pdf" target="_">Please Print and Sign the Disclaimer Form</a></p>
             <button type="button" id="signUp" class="signup-btn" onclick="registration()">Sign Up</button>
                 <!--<p>Already Registered? <a href="#">Sign in</a></p>-->
         </div>
