--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li><a href="signup.html" target="_">Sign Up</a></li>
+          <li><a href="#services">About</a></li>
+          <li><a href="#clients">Sponsors</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#faq">FAQ</a></li>
           <!--<li><a href="">Sign In</a></li>-->
           <li><a href="#footer">Contact Us</a></li>
           <li><a href="https://instagram.com/protohacks/" class="instagram" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a></li>
@@ -93,6 +97,28 @@
   </section><!-- #intro -->
 
   <main id="main">
+
+      <!--==========================
+      Services Section
+    ============================-->
+    <!--<section id="services" class="section-bg">
+      <div class="container">
+
+        <header class="section-header">
+          <h3>About Us</h3>
+          <h6>ProtoHacks is a hackathon aiming to inspire the future generation of engineers. At ProtoHacks, we hope to create an environment where innovation and creativity thrive. With proper mentorship and guidance, we believe that when great minds are put together, anything is achievable. During ProtoHacks, participants actively practice teamwork, presentation skills, and doing things they enjoy. To ensure the best experience for each participant, Workshops, food, beverages, and ProtoHacks swag will be provided. ProtoHacks encourages competition and kindness so we ask that you come to the competition ready to work!</h6>
+        </header>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.0s">
+          </div>
+
+        </div>
+
+      </div>
+    </section>-->
+
+
     <!--==========================
       Services Section
     ============================-->
@@ -101,7 +127,7 @@
 
         <header class="section-header">
           <h3>ProtoHacks' Goals:</h3>
-          <p>Inspiring Future Engineers</p>
+          <p></p>
         </header>
 
         <div class="row">
@@ -580,72 +606,6 @@
       </div>
     </section><!-- #testimonials -->
 
-        <!--==========================
-      Team Section
-    ============================-->
-    <section id="team" class="section-bg">
-      <div class="container">
-        <div class="section-header">
-          <h3>Team</h3>
-          <p>Meet the team behind ProtoHacks.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-3 col-md-6 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-            <div class="member">
-              <img src="img/team/vinay.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Vinay Venkatesh</h4>
-                  <span>Founder</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-            <div class="member">
-              <img src="img/team/arvind.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Arvind Kumar</h4>
-                  <span>Organizer</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-          <div class="member">
-              <img src="img/team/krutav.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Krutav Shah</h4>
-                  <span>Advisor</span>
-                  <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href="https://instagram.com/krutavshah"><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
     <!-- #team --> 
         <!--==========================
       Clients Section
@@ -664,6 +624,76 @@
       </div>
     </section><!-- #clients -->
 
+            <!--==========================
+      Team Section
+    ============================-->
+    <section id="team" class="section-bg">
+      <div class="container">
+        <div class="section-header">
+          <h3>Team</h3>
+          <p>Meet the team behind ProtoHacks.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3 col-md-6 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+            <div class="member">
+              <img src="img/team/vinay.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Vinay Venkatesh</h4>
+                  <span>Founder/Webmaster</span>
+                  <div class="social">
+                    <!--<a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>-->
+                    <a href="https://www.linkedin.com/in/vinayven" target="_"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.github.com/Simple2006" target="_"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+            <div class="member">
+              <img src="img/team/arvind.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Arvind Kumar</h4>
+                  <span>Organizer/Outreach</span>
+                  <div class="social">
+                    <!--<a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>-->
+                    <a href="https://www.linkedin.com/in/arvind-kumar-918a44158" target="_"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.github.com/Iamaacoder" target="_"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="member">
+              <img src="img/team/krutav.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Krutav Shah</h4>
+                  <span>Webmaster</span>
+                  <div class="social">
+                    <!--<a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>-->
+                    <a href="https://www.linkedin.com/in/krutav-shah-249a3116a" target="_"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.github.com/KrutavShah" target="_"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
 
 
         <!--==========================
@@ -678,22 +708,55 @@
 
         <ul id="faq-list" class="wow fadeInUp">
           <li>
-            <a data-toggle="collapse" class="collapsed" href="#faq1">How much does it cost?<i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#faq1">How much does it cost to attend?<i class="ion-android-remove"></i></a>
             <div id="faq1" class="collapse" data-parent="#faq-list">
               <p>
-                The whole event is free for everyone. We will provide food, beverage, and everything else you need for free!
+                ProtoHacks will always be free for everyone. We will provide breakfast, lunch, dinner, and plenty of snacks for free!
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq2" class="collapsed">Do I need to bring a computer?<i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" href="#faq2" class="collapsed">What should I bring?<i class="ion-android-remove"></i></a>
             <div id="faq2" class="collapse" data-parent="#faq-list">
               <p>
-                You may bring your own computer if you like, but we also provide computers at the event.
+                To attend ProtoHacks, a student ID from your school is required. If desired, laptops, toiletries, and any accessories can be brought!
               </p>
             </div>
           </li>
+
+          <li>
+            <a data-toggle="collapse" href="#faq3" class="collapsed">Can I win anything?<i class="ion-android-remove"></i></a>
+            <div id="faq3" class="collapse" data-parent="#faq-list">
+              <p>
+                Yes! On top of the fun activities we have planned, prizes will be given for our top submissions! Not to worry, if you aren't one of the top submissions, plenty of other things such as stickers, food, and other goodies will be given away!
+              </p>
+            </div>
+          </li>
+
+          <a data-toggle="collapse" href="#faq4" class="collapsed">How Long is ProtoHacks?<i class="ion-android-remove"></i></a>
+          <div id="faq4" class="collapse" data-parent="#faq-list">
+            <p>
+              ProtoHacks is a 12 hour hackathon which will last through X AM to Y PM.
+            </p>
+          </div>
+        </li>
+
+        <a data-toggle="collapse" href="#faq5" class="collapsed">How many people per team?<i class="ion-android-remove"></i></a>
+        <div id="faq5" class="collapse" data-parent="#faq-list">
+          <p>
+            Teams can have a maximum of 4 people. Although teams can be made of less people, we strongly advise that you hit the limit of 4 members. More minds can never hurt!
+          </p>
+        </div>
+      </li>
+
+      <a data-toggle="collapse" href="#faq6" class="collapsed">Who can attend?<i class="ion-android-remove"></i></a>
+      <div id="faq6" class="collapse" data-parent="#faq-list">
+        <p>
+          ProtoHacks is open to any high school students (9th - 12th grade). No experience is neccessary to participate and if you have already graduated high school, you can contact a ProtoHacks team member to be a mentor!
+        </p>
+      </div>
+    </li>
 
         </ul>
 
