--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 intro-img order-md-last order-first">
+        <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp">
           <img src="img/Terminal1GImp.png" alt="" style="box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);" class="img-fluid"/>
         </div>
       </div>
