Added an about us section

--- a/index.html
+++ b/index.html
@@ -87,37 +87,42 @@
             <a href="signup.html" class="btn-get-started scrollto" target="_">Sign Up</a>
           </div>
         </div>
-
         <div class="col-md-6 intro-img order-md-last order-first wow bounceInUp">
-          <img src="img/Terminal1GImp.png" alt="" style="box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);" class="img-fluid"/>
+          <img src="img/Terminal1GImp.png" alt style="box-shadow: 5px 6px 4px 0 #44dc35;" class="img-fluid">
         </div>
       </div>
-
     </div>
   </section><!-- #intro -->
 
   <main id="main">
 
       <!--==========================
-      Services Section
+      About Us Section
     ============================-->
-    <!--<section id="services" class="section-bg">
+  
+    <!--ProtoHacks is a hackathon aiming to inspire the future generation of engineers. At ProtoHacks, we hope to create an environment where innovation and creativity thrive. With proper mentorship and guidance, we believe that when great minds are put together, anything is achievable. During ProtoHacks, participants actively practice teamwork, presentation skills, and doing things they enjoy. To ensure the best experience for each participant, Workshops, food, beverages, and ProtoHacks swag will be provided. ProtoHacks encourages competition and kindness so we ask that you come to the competition ready to work!-->
+      
+    <section id="about">
+
       <div class="container">
-
-        <header class="section-header">
-          <h3>About Us</h3>
-          <h6>ProtoHacks is a hackathon aiming to inspire the future generation of engineers. At ProtoHacks, we hope to create an environment where innovation and creativity thrive. With proper mentorship and guidance, we believe that when great minds are put together, anything is achievable. During ProtoHacks, participants actively practice teamwork, presentation skills, and doing things they enjoy. To ensure the best experience for each participant, Workshops, food, beverages, and ProtoHacks swag will be provided. ProtoHacks encourages competition and kindness so we ask that you come to the competition ready to work!</h6>
-        </header>
-
         <div class="row">
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.0s">
+
+          <div class="col-lg-5 col-md-6">
+            <div class="about-img">
+              <img src="img/AMDstock3.JPG" alt="">
+            </div>
           </div>
 
+          <div class="col-lg-7 col-md-6">
+            <div class="about-content">
+              <h2>About Us</h2>
+              <h3>ProtoHacks is a nonprofit organization comitted to delivering a memorable learning and hackathon experience. <a href="#">Learn More</a></h3>
+            </div>
+          </div>
         </div>
-
       </div>
-    </section>-->
 
+    </section>
 
     <!--==========================
       Services Section
